[package]
name = "sudachi-wasm"
version = "1.0.0-pre.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sudachi = { path = "../sudachi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.83" }

[features]
default = []
embed_dictionary = []
